deployment/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acm-fleet
  namespace: acm-fleet
  labels:
    app: acm-fleet
spec:
  to:
    kind: Service
    name: acm-fleet-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
